first stab at parsing ip addresses from bgp4mp messages.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,7 @@ authors = ["Dan Rammer <hamersaw@gmail.com>"]
 
 [dependencies]
 byteorder = "*"
+
+[[example]]
+name = "main"
+path = "examples/main.rs"
